fixed horizontal scrolling compare products

--- a/src/app/common/modals/component/compare-product/compare-product.component.scss
+++ b/src/app/common/modals/component/compare-product/compare-product.component.scss
@@ -1,10 +1,10 @@
 :host {
-	display: block;
-	height: 100%;
+	display: flex;
+	width: 100%;
 }
+
 dialog-app {
 	height: 85vh;
-	width: auto;
 
 	dialog-header-app {
 		font-size: var(--font-size-l);
